# Flipkart-Product-Recommendation-Chatbot

./: .dockerignore  README.md  app.py  main.py  pyproject.toml  requirements.txt  setup.py
flipkart/: config.py  data_ingestion.py  rag_agent.py
prometheus/: prometheus-configmap.yaml
