[project]
name = "flipkart-project"
version = "0.3.0"
description = "Flipkart Product Recommendation Chatbot using LangChain, LangGraph, AstraDB and Flask"
readme = "README.md"
requires-python = ">=3.10,<3.13"
authors = [
    { name = "Swatej Wagh" }
]

dependencies = [
    "flask==3.1.2",
    "python-dotenv==1.0.1",
    "prometheus-client==0.23.1",
    "pandas==2.3.3",
    "datasets==4.4.2",
    "pypdf==6.5.0",
    "streamlit==1.52.2",
    "langchain==0.3.27",
    "langchain-core==0.3.74",
    "langchain-community==0.3.27",
    "langchain-huggingface==0.3.1",
    "langchain-groq==0.2.5",
    "langchain-astradb==1.0.0",
    "langgraph==0.2.56",
    "sentence-transformers==5.1.2",
    "transformers==4.57.1",
    "huggingface-hub==0.36.0"
]

[build-system]
requires = ["setuptools>=80.0", "wheel"]
build-backend = "setuptools.build_meta"